got the fox html to show on page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <label for="writeHere">Write Here:</label>
         <textarea type="input" id="text-area-box" name="write-here" placeholder="It was a dark and stormy night. . . " rows="10" cols="50"></textarea>
         <p>Word Count:
-            <span id="show-count">0</span>
+            <span id="show-count" onChange="">0</span>
         </p>
     </div>
 
