--- a/index.html
+++ b/index.html
@@ -9,11 +9,27 @@
 </head>
 <body>
     <h1>Writing Tool</h1>
+    <div id="seting-goal"></div>
+        <!-- 
+        <label for="setting-goal">Set Word Goal:</label>
+        -->
+        <div class="goal-container">
+            <form>
+            <input id="set-word-goal" type="text" list="wordGoalOptions" placeholder="Set Word Goal Here" />
+            <datalist id="wordGoalOptions">
+                <option value="100">100</option>
+                <option value="300">300</option>
+                <option value="500">500</option>
+            </datalist>
+            <button id="submit">Submit</button>
+        </form>
+        </div>
+    </div>
     <div id="user-container">
         <label for="writeHere">Write Here:</label>
-        <textarea type="input" id="text-area-box" name="write-here" placeholder="It was a dark and stormy night. . . " rows="10" cols="50"></textarea>
+        <textarea type="input" id="text-area-box" name="write-here" placeholder="It was a dark and stormy night. . . " ></textarea>
         <p>Word Count:
-            <span id="show-count" onChange="">0</span>
+            <span id="show-count">0</span>
         </p>
     </div>
 
