added word goal choice

--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Writing Tool</h1>
-    <div id="seting-goal"></div>
+    <h1>A Crafty <i>(like a fox)</i> Writing Tool</h1>
+    <div id="setting-goal"></div>
         <!-- 
         <label for="setting-goal">Set Word Goal:</label>
         -->
         <div class="goal-container">
-            <form>
-            <input id="set-word-goal" type="text" list="wordGoalOptions" placeholder="Set Word Goal Here" />
-            <datalist id="wordGoalOptions">
+            <form> New fox every
+            <select id="set-word-goal" type="text" list="wordGoalOptions">
                 <option value="100">100</option>
                 <option value="300">300</option>
                 <option value="500">500</option>
-            </datalist>
-            <button id="submit">Submit</button>
+           </select>
+           words.
         </form>
         </div>
     </div>
